src/snapshots/tap_parser__test__empty.snap
---
source: src/test.rs
expression: "parser.parse(indoc! {\n                \"\n            TAP version 14\n            1..0\n        \"\n            }).unwrap()"
---
- Plan:
    count: 0
    reason: ~

