src/snapshots/tap_parser__test__empty_with_reason_as_subtest.snap
---
source: src/test.rs
expression: parser.parse(&nested_doc).unwrap()
---
- Plan:
    count: 1
    reason: ~
- Subtest:
    name: inner
    statements:
      - Plan:
          count: 0
          reason: no tests to run
    ending:
      result: true
      number: 1
      desc: inner
      directive: ~
      yaml: []

