src/snapshots/tap_parser__test__misindented_yaml.snap
---
source: src/test.rs
expression: parser.statements()
---
- Plan:
    count: 1
    reason: ~
- TestPoint:
    result: false
    number: 1
    desc: failure
    directive: ~
    yaml: []

