src/snapshots/tap_parser__test__plan_at_the_end.snap
---
source: src/test.rs
expression: "parser.parse(indoc! {\n                \"\n            TAP version 14\n            ok - this is a dash description - with a dash!\n            1..1\n        \"\n            }).unwrap()"
---
- TestPoint:
    result: true
    number: ~
    desc: this is a dash description - with a dash!
    directive: ~
    yaml: []
- Plan:
    count: 1
    reason: ~

