src/snapshots/tap_parser__test__pragma.snap
---
source: src/test.rs
expression: "parser.parse(indoc! {\n                \"\n            TAP version 14\n            1..1\n            pragma +strict\n        \"\n            }).unwrap()"
---
- Plan:
    count: 1
    reason: ~

