src/snapshots/tap_parser__test__single_sucess_bare.snap
---
source: src/test.rs
expression: "parser.parse(indoc! {\n                \"\n            TAP version 14\n            1..1\n            ok\n        \"\n            }).unwrap()"
---
- Plan:
    count: 1
    reason: ~
- TestPoint:
    result: true
    number: ~
    desc: ~
    directive: ~
    yaml: []

